crates/anymount/src/tui/components/mounts_list/snapshots/disconnected_mount_row_selected.snap
---
source: crates/anymount/src/tui/components/mounts_list/mount_row.rs
expression: terminal.backend()
---
"┌─────────────────────────────────────────────────────────────────────────────┐│"
"│ ○  test                 /test                            test    [ ⇒ ][ ↵ ] ││"
"└─────────────────────────────────────────────────────────────────────────────┘│"
