crates/anymount/src/tui/components/mounts_list/snapshots/mounts_list_scroll_first.snap
---
source: crates/anymount/src/tui/components/mounts_list/mounts_list.rs
expression: terminal.backend()
---
" ┌────────────────────────────────────────────────────────────────────────────┐▲"
" │ ●  First               /mnt/first                       local   [ ⇐ ][ ↵ ] │█"
"┌┴───────────────────────────────────────────────────────────────────────────┬┤█"
"│ ○  Second              /mnt/second                      local              ││█"
"├────────────────────────────────────────────────────────────────────────────┤│█"
"│ ○  Third               /mnt/third                       local              ││█"
"├────────────────────────────────────────────────────────────────────────────┤│█"
"│ ○  Fourth              /mnt/fourth                      local              ││║"
"└────────────────────────────────────────────────────────────────────────────┘│▼"
"       j↑ select ↓k             ⇐ disconnect connect ⇒             info ↵       "
"                                                                                "
