crates/anymount/src/tui/components/mounts_list/snapshots/mounts_list_scroll_last.snap
---
source: crates/anymount/src/tui/components/mounts_list/mounts_list.rs
expression: terminal.backend()
---
"┌────────────────────────────────────────────────────────────────────────────┐│▲"
"│ ○  Second              /mnt/second                      local              ││║"
"├────────────────────────────────────────────────────────────────────────────┤│█"
"│ ○  Third               /mnt/third                       local              ││█"
"├────────────────────────────────────────────────────────────────────────────┤│█"
"│ ○  Fourth              /mnt/fourth                      local              ││█"
"└┬───────────────────────────────────────────────────────────────────────────┴┤█"
" │ +  Add                                                               [ ↵ ] │█"
" └────────────────────────────────────────────────────────────────────────────┘▼"
"       j↑ select ↓k             ⇐ disconnect connect ⇒             info ↵       "
"                                                                                "
